@@ -136,14 +136,14 @@ height and width are not set, the page might flicker while the video
 loads. According to the <a class="reference external" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/video">HTML5 spec</a>, hight and width must be
 specified as pixel values.</p>
 <figure class="align-center">
-<video controls="controls" src="../../../docs/user/rst/images/pens.mp4" title="test video in a figure" width="200">
+<video controls="controls" src="../../../docs/user/rst/images/pens.mp4" style="width: 200px;" title="test video in a figure">
 <a href="../../../docs/user/rst/images/pens.mp4">test video in a figure</a>
 </video>
 <figcaption>
 <p>Simple test video in a centered figure</p>
 </figcaption>
 </figure>
-<p>A video like this <video src="../../../docs/user/rst/images/pens.mp4" title="rotating pens video" width="60"><a href="../../../docs/user/rst/images/pens.mp4">rotating pens video</a></video> can be included inline via substitution.</p>
+<p>A video like this <video src="../../../docs/user/rst/images/pens.mp4" style="width: 60px;" title="rotating pens video"><a href="../../../docs/user/rst/images/pens.mp4">rotating pens video</a></video> can be included inline via substitution.</p>
 </section>
 </main>
 </body>
